--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             <header>
                 <div class="titulo">
                     <img src="./static/ibm.png" class="logo">
-                    <h1>OpenShift World Tour São Paulo</h1>
+                    <h1>Batata São Paulo</h1>
                     <img src="https://assets.openshift.com/hubfs/images/logos/osh/Logo-Red_Hat-OpenShift-A-Reverse-RGB.svg"
                         class="rh">
                 </div>
